--- a/src/components/list/ListElement.scss
+++ b/src/components/list/ListElement.scss
@@ -1,17 +1,31 @@
- .list {
-    display: flex;
-    flex-direction: row;
-    align-self: baseline;
-    justify-content: end;
-    gap: 45px;
-    list-style-type: none;
+.list {
+  display: flex;
+  flex-direction: row;
+  align-self: baseline;
+  justify-content: end;
+  gap: 45px;
+  list-style-type: none;
+
+  &__libraries {
+    font-size: 24px;
+  }
+}
+
+.logo {
+  width: 30px;
+  height: 30px;
+}
+
+@media screen and (max-width: 700px) {
+  .list {
+    gap:15px;
 
     &__libraries {
-      font-size: 24px;
+      font-size: 18px;
     }
   }
-
   .logo {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
   }
+}
