--- a/src/components/slide/Slide.scss
+++ b/src/components/slide/Slide.scss
@@ -7,7 +7,20 @@
   &__wrapper {
     padding-top: 10px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
   }
+}
+
+@media screen and (max-width: 700px) {
+  .slide {
+  
+    &__wrapper {
+      padding-top: 10px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+    }
+  }
+
 }
